<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/tile_settings">

        <ListPreference
            android:defaultValue="priority"
            android:entries="@array/silence_mode_labels"
            android:entryValues="@array/silence_mode_values"
            android:key="silence_mode"
            android:summary="%s"
            android:title="@string/silence_mode_label" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="show_notification"
            android:title="@string/show_notification_label" />


    </PreferenceCategory>
    <PreferenceCategory android:title="@string/dialog_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="dark_theme"
            android:title="@string/dark_theme_label" />
    </PreferenceCategory>
</PreferenceScreen>